----------------------------------------------------
-Now you can define what you want to write in statusbar when you select
an area:
	sum
	average
	count
	min
	max
you can configure it in "Configure dialogBox" -> misc

2000-12-27-Montel laurent <lmontel@mandrakesoft.com>
----------------------------------------------------
-Now you can see what you print with "Preview"
I used ghostview.

2000-12-29-Montel laurent <lmontel@mandrakesoft.com>
----------------------------------------------------
-Now you can change default grid color
-Undo works when you change type of cell (combobox, button, normal)
-Add "Selection List"


2001-01-02-Montel laurent <lmontel@mandrakesoft.com>
----------------------------------------------------
-Now you can "don't print a text"
used "cell layout" dialogbox -> misc -> "don't print text"

2001-01-03-Montel laurent <lmontel@mandrakesoft.com>
----------------------------------------------------
-Now you can create "Sort list" for autofill

2001-01-08-Montel laurent <lmontel@mandrakesoft.com>
----------------------------------------------------
-Add new functions : ISDATE ISTIME DECSEX (convert decimal to time value)
SEXDEC( converts time value to decimal)

2001-01-24-Montel laurent <lmontel@mandrakesoft.com>
----------------------------------------------------
now you can define "Default page layout parameters" (size and orientation)

2001-01-28-Montel laurent <lmontel@mandrakesoft.com>
----------------------------------------------------
Now you can hide/show formula bar (editWidget and posWidget)
Fix layout in kspread_dlg_preference

2001-01-29-Montel laurent <lmontel@mandrakesoft.com>
----------------------------------------------------
-Now you can used "Area name" in formula
example =sum('kspread')

2001-02-03-Montel laurent <lmontel@mandrakesoft.com>
----------------------------------------------------
Add three new functions hours,seconds,minutes
These functions returns hour,second or minutes in a time expression.