@@ -1171,3 +1171,7 @@ example =sum('kspread')
 ----------------------------------------------------
 Add three new functions hours,seconds,minutes
 These functions returns hour,second or minutes in a time expression.
+
+2001-02-07-Montel laurent <lmontel@mandrakesoft.com>
+----------------------------------------------------
+-Now you can create a hyperlink with internet link or email
